# langcode

./: .gitignore  CONCEPT.md  README.md  pyproject.toml
docs/: mint.json
examples/: claude_agent.ipynb
langcode/jupyter/: __init__.py  _local.py  _main.py  _protocol.py
