[tool.poetry]
name = "langcode"
version = "0.1.5"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/keell0renz/langcode"
repository = "https://github.com/keell0renz/langcode"
documentation = "https://github.com/keell0renz/langcode"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-client = "^8.6.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
